--- a/.github/workflows/release-docker-image.yml
+++ b/.github/workflows/release-docker-image.yml
@@ -27,4 +27,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-petclinic-angular:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-petclinic-angular:release
